# pl_17

./: README.md  main.py  pyproject.toml
src/conf/: config.py
src/database/: db.py  models.py  sql_app.db
src/repository/: comments.py  ratings.py  services.py  users.py
src/routes/: comments_routes.py  services.py
src/schemas/: comment_schemas.py  rating_schemas.py  service_schemas.py  tag_schemas.py  user_schemas.py
src/services/: images.py
src/services/admin_panel/: admin_panel.py
