[tool.poetry]
name = "platforma17"
version = "0.1.0"
description = "Pet-project platforma17"
authors = ["OleksandrGnatiuk <oleksandr.gnatiuk@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standart"], version = "^0.23.2"}
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
sqladmin = "^0.14.1"
fastapi-limiter = "^0.1.5"
pydantic-settings = "^2.0.3"
passlib = "^1.7.4"
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
